Moved docs to mobotx.github.io

--- a/mobot/setup.cfg
+++ b/mobot/setup.cfg
@@ -1,19 +1,17 @@
 [metadata]
 name = mobot
 version = 0.1.0
-author = Aditya Shriwastava
-author_email = adityashriwastava7@gmail.com
+author = Mobotx
+author_email = mobotx.github.io@gmail.com
 description = Turning Mobile Phone into Robot
-long_description = Visit [mobotx.github.io](http://mobotx.github.io/) to know more!
-long_description_content_type = text/markdown
-url = http://mobotx.github.io/
+url = https://github.com/mobotx/mobot
 classifiers =
     Programming Language :: Python :: 3
     License :: OSI Approved :: MIT License
     Operating System :: OS Independent
 [options]
 package_dir =
-    = src
+    = .
 packages = find:
 python_requires = >=3.6
 install_requires =
@@ -25,7 +23,7 @@ install_requires =
     texttable
 
 [options.packages.find]
-where = src
+where = .
 
 [options.entry_points]
 console_scripts =
