Renamed teleop_with_camera to teleop

--- a/mobot/setup.cfg
+++ b/mobot/setup.cfg
@@ -35,4 +35,4 @@ console_scripts =
     mobot_magnetometer_test = mobot._tests.magnetometer_test:main
     mobot_flashlight_test = mobot._tests.flashlight_test:main
     mobot_performance_test = mobot._tests.performance_test:main
-    mobot_teleop = mobot._tests.teleop_with_camera:main
+    mobot_teleop = mobot._tests.teleop:main
