Update Author Email

--- a/mobot/setup.cfg
+++ b/mobot/setup.cfg
@@ -2,7 +2,7 @@
 name = mobot
 version = 0.1.0
 author = Mobotx
-author_email = mobotx.ai@gmail.com
+author_email = adityashriwastava7@gmail.com
 description = Turning Mobile Phone into Robot
 url = https://github.com/mobotx/mobot
 classifiers =
