--- a/mobot/setup.cfg
+++ b/mobot/setup.cfg
@@ -19,7 +19,7 @@ install_requires =
     grpcio-tools
     numpy
     opencv-python
-    matplotlib
+    Pillow
     texttable
 
 [options.packages.find]
