--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -13,6 +13,9 @@ jobs:
     
     - name: Change pwd to mobot
       run: cd mobot
+      
+    - name: x
+      run: ls
 
     - name: Install mobot package
       run: pip3 install .
