--- a/.github/workflows/publish_mobot_to_pypi.yml
+++ b/.github/workflows/publish_mobot_to_pypi.yml
@@ -11,8 +11,11 @@ on:
   release:
     types: [published]
 jobs:
-  deploy:
+  publish:
     runs-on: ubuntu-latest
+    defaults:
+      run:
+        working-directory: ./mobot
     steps:
     - uses: actions/checkout@v2
     
@@ -25,9 +28,6 @@ jobs:
       run: |
         python -m pip install --upgrade pip
         pip install build
-    
-    - name: Change pwd to mobot
-      run: cd mobot
     
     - name: Build package
       run: python -m build
