--- a/mobot/setup.cfg
+++ b/mobot/setup.cfg
@@ -1,7 +1,7 @@
 [metadata]
 name = mobot
 version = 0.1.1
-author = Mobotx
+author = Aditya Shriwastava
 author_email = adityashriwastava7@gmail.com
 description = Turning Mobile Phone into Robot
 url = https://github.com/mobotx/mobot
