--- a/.github/workflows/publish_mobot_to_pypi.yml
+++ b/.github/workflows/publish_mobot_to_pypi.yml
@@ -18,7 +18,8 @@ jobs:
       run:
         working-directory: ./mobot
     steps:
-    - uses: actions/checkout@v2
+    - name: Checkout
+      uses: actions/checkout@v2
     
     - name: Set up Python
       uses: actions/setup-python@v2
@@ -32,36 +33,39 @@ jobs:
     
     - name: Build package
       run: python -m build
-    
-    - name: Publish package
-      uses: pypa/gh-action-pypi-publish@27b31702a0e7fc50959f5ad993c78deac1bdfc29
-      with:
-        user: __token__
-        password: ${{ secrets.PYPI_API_TOKEN }}
+      
+    - name: Debug
+      run: tree
+      
+#     - name: Publish package
+#       uses: pypa/gh-action-pypi-publish@27b31702a0e7fc50959f5ad993c78deac1bdfc29
+#       with:
+#         user: __token__
+#         password: ${{ secrets.PYPI_API_TOKEN }}
         
-  publish_mobot_utils:
-    runs-on: ubuntu-latest
-    defaults:
-      run:
-        working-directory: ./mobot_utils
-    steps:
-    - uses: actions/checkout@v2
+#   publish_mobot_utils:
+#     runs-on: ubuntu-latest
+#     defaults:
+#       run:
+#         working-directory: ./mobot_utils
+#     steps:
+#     - uses: actions/checkout@v2
     
-    - name: Set up Python
-      uses: actions/setup-python@v2
-      with:
-        python-version: '3.x'
+#     - name: Set up Python
+#       uses: actions/setup-python@v2
+#       with:
+#         python-version: '3.x'
     
-    - name: Install dependencies
-      run: |
-        python -m pip install --upgrade pip
-        pip install build
+#     - name: Install dependencies
+#       run: |
+#         python -m pip install --upgrade pip
+#         pip install build
     
-    - name: Build package
-      run: python -m build
+#     - name: Build package
+#       run: python -m build
     
-    - name: Publish package
-      uses: pypa/gh-action-pypi-publish@27b31702a0e7fc50959f5ad993c78deac1bdfc29
-      with:
-        user: __token__
-        password: ${{ secrets.PYPI_API_TOKEN }}
+#     - name: Publish package
+#       uses: pypa/gh-action-pypi-publish@27b31702a0e7fc50959f5ad993c78deac1bdfc29
+#       with:
+#         user: __token__
+#         password: ${{ secrets.PYPI_API_TOKEN }}
