--- a/.github/workflows/publish_mobot_to_pypi.yml
+++ b/.github/workflows/publish_mobot_to_pypi.yml
@@ -1,11 +1,3 @@
-# This workflow will upload a Python Package using Twine when a release is created
-# For more information see: https://help.github.com/en/actions/language-and-framework-guides/using-python-with-github-actions#publishing-to-package-registries
-
-# This workflow uses actions that are not certified by GitHub.
-# They are provided by a third-party and are governed by
-# separate terms of service, privacy policy, and support
-# documentation.
-
 name: Upload Python Package
 on:
   release:
@@ -34,38 +26,38 @@ jobs:
     - name: Build package
       run: python -m build
       
-    - name: Debug
-      run: tree
-      
-#     - name: Publish package
-#       uses: pypa/gh-action-pypi-publish@27b31702a0e7fc50959f5ad993c78deac1bdfc29
-#       with:
-#         user: __token__
-#         password: ${{ secrets.PYPI_API_TOKEN }}
+    - name: Publish package
+      uses: pypa/gh-action-pypi-publish@27b31702a0e7fc50959f5ad993c78deac1bdfc29
+      with:
+        packages_dir: mobot/dist/
+        user: __token__
+        password: ${{ secrets.PYPI_API_TOKEN }}
         
-#   publish_mobot_utils:
-#     runs-on: ubuntu-latest
-#     defaults:
-#       run:
-#         working-directory: ./mobot_utils
-#     steps:
-#     - uses: actions/checkout@v2
+  publish_mobot_utils:
+    runs-on: ubuntu-latest
+    defaults:
+      run:
+        working-directory: ./mobot_utils
+    steps:
+    - name: Checkout
+      uses: actions/checkout@v2
     
-#     - name: Set up Python
-#       uses: actions/setup-python@v2
-#       with:
-#         python-version: '3.x'
+    - name: Set up Python
+      uses: actions/setup-python@v2
+      with:
+        python-version: '3.x'
     
-#     - name: Install dependencies
-#       run: |
-#         python -m pip install --upgrade pip
-#         pip install build
+    - name: Install dependencies
+      run: |
+        python -m pip install --upgrade pip
+        pip install build
     
-#     - name: Build package
-#       run: python -m build
+    - name: Build package
+      run: python -m build
     
-#     - name: Publish package
-#       uses: pypa/gh-action-pypi-publish@27b31702a0e7fc50959f5ad993c78deac1bdfc29
-#       with:
-#         user: __token__
-#         password: ${{ secrets.PYPI_API_TOKEN }}
+    - name: Publish package
+      uses: pypa/gh-action-pypi-publish@27b31702a0e7fc50959f5ad993c78deac1bdfc29
+      with:
+        packages_dir: mobot_utils/dist/
+        user: __token__
+        password: ${{ secrets.PYPI_API_TOKEN }}
