--- a/.github/workflows/publish_mobot_app_to_playstore.yml
+++ b/.github/workflows/publish_mobot_app_to_playstore.yml
@@ -3,13 +3,14 @@ on:
   release:
     types: [published]
 jobs:
-  publisg:
+  publish:
     runs-on: ubuntu-latest
     defaults:
       run:
         working-directory: ./android
     steps:
-      - uses: actions/checkout@v1
+      - name: Checkout
+        uses: actions/checkout@v2
       
       - name: Change wrapper permissions
         run: chmod +x ./gradlew
@@ -23,7 +24,7 @@ jobs:
       - name: Sign Bundle
         uses: r0adkll/sign-android-release@v1
         with:
-          releaseDirectory: app/build/outputs/bundle/release
+          releaseDirectory: android/app/build/outputs/bundle/release
           signingKeyBase64: ${{ secrets.ANDROID_SIGN_KEY }}
           alias: key0
           keyStorePassword: ${{ secrets.ANDROID_KEY_PASSWORD }}
@@ -34,5 +35,5 @@ jobs:
         with:
           serviceAccountJsonPlainText: ${{secrets.PUBLISH_MOBOT_APP_SERVICE_ACCOUNT}}
           packageName: io.github.mobotx
-          releaseFiles: app/build/outputs/bundle/release/app-release.aab
-          whatsNewDirectory: whatsnew
+          releaseFiles: android/app/build/outputs/bundle/release/app-release.aab
+          whatsNewDirectory: android/whatsnew
